--- a/app/views/manageorg/solicitor/editpermissions.html
+++ b/app/views/manageorg/solicitor/editpermissions.html
@@ -7,6 +7,8 @@ Divorce
 
 {% block content %}
 
+<a href="/manageorg/solicitor/userdetails" class="govuk-back-link govuk-!-margin-top-0  govuk-!-margin-bottom-6">Back</a>
+
 <div style="width:1220px; display: flex; margin: 0 auto; margin-right: 480px;">
     <div class="">
 
