--- a/app/views/manageorg/solicitor/users.html
+++ b/app/views/manageorg/solicitor/users.html
@@ -95,7 +95,7 @@ Divorce
 
 
                     <tr class="govuk-table__row">
-                        <td scope="row" class="govuk-table__cell" style="width:320px;">>Li Teems</td>
+                        <td scope="row" class="govuk-table__cell" style="width:320px;">Li Teems</td>
                         <td class="govuk-table__cell" style="width:580px;">Li.Teems@bondshawsolictors.uk</td>
                         <td class="govuk-table__cell" style="width:120px;">Pending</td>
                     </tr>
