--- a/app/views/searchorgs/search/testoffullsearch.html
+++ b/app/views/searchorgs/search/testoffullsearch.html
@@ -29,10 +29,6 @@ Divorce
                 <input class="govuk-input " id="names" name="names" type="text" style="border: solid 1px; height:32px; font-size:18px;">
             </div>
 
-            <p onclick="showsomecsvdata()">asfaffasdfa</p>
-
-
-
 
 
             <div class="govuk-form-group">
@@ -320,87 +316,88 @@ Divorce
 
 <script>
 
+    var inputbox = document.getElementById("searchinput");
 
     function showsomecsvdata()
     {
 
-        var rawFile = new XMLHttpRequest();
-        rawFile.open("GET", "/public/data/mindatacsv.csv", false);
-        rawFile.onreadystatechange = function ()
+        var enteredtext = inputbox.value;
+
+        if (0 == enteredtext.length.toString().toLowerCase())
         {
-            if(rawFile.readyState === 4)
+            document.getElementById('texterdiv').innerHTML = '';
+        }
+        else
+        {   var rawFile = new XMLHttpRequest();
+            rawFile.open("GET", "/public/data/mindatacsv.csv", false);
+
+            rawFile.onreadystatechange = function ()
             {
-                if(rawFile.status === 200 || rawFile.status == 0)
+                if(rawFile.readyState === 4)
                 {
-                    var allText = rawFile.responseText;
-                    //alert(allText);
-
-                    var allRows = allText.split(/\r?\n|\r/);
-                    var row1 =  allRows[0].split(',');
-                    //alert(allRows.length);
-
-                    var divonpage = document.getElementById('texterdiv');
-
-                    var resultscounter = 0;
-                    divonpage.innerHTML = '';
-
-                    for(i=0; i<allRows.length-1; i++)
+                    if(rawFile.status === 200 || rawFile.status == 0)
                     {
-                        if(resultscounter<10)
+                        var allText = rawFile.responseText;
+                        //alert(allText);
+
+                        var allRows = allText.split(/\r?\n|\r/);
+                        var row1 =  allRows[0].split(',');
+                        //alert(allRows.length);
+
+                        var divonpage = document.getElementById('texterdiv');
+
+                        var resultscounter = 0;
+                        divonpage.innerHTML = '';
+
+                        for(i=0; i<allRows.length-1; i++)
                         {
-                            var row1 =  allRows[i].split(',');
-                            var templowercase = row1.toString().toLowerCase();
-
-                            var enteredtext = document.getElementById("searchinput").value;
-
-                            //Compare
-                            if ( templowercase.includes(enteredtext.toString().toLowerCase()) )
+                            if(resultscounter<10)
                             {
-                                divonpage.innerHTML = divonpage.innerHTML + '<div id="testesult'+resultscounter+'" style="display: flex;">' +
-                                                                                '<div style="width:560px;">' +
-                                                                                    '<p id="results'+resultscounter+'">' +
-                                                                                        '<span class="govuk-!-font-weight-bold">'
-                                                                                            + row1 +
-                                                                                    '</p>' +
-                                                                                '</div>' +
-                                                                                '<div style="display:flex; flex-direction:column;">' +
-                                                                                    '<div style=" flex-grow: 2">' +
-                                                                                    '</div>' +
-                                                                                    '<div style="justify-content:center; margin-top:32px;">' +
-                                                                                        '<p id="selectbutton'+resultscounter+'" style="color:#005ea5; cursor:pointer; text-decoration:underline;" data-module="govuk-button" onclick="showselectedresult('+resultscounter+')">Select</p>' +
-                                                                                    '</div>' +
-                                                                                    '<div style="flex-grow:2">' +
-                                                                                    '</div>' +
-                                                                                '</div>' +
-                                                                            '</div>';
+                                var row1 =  allRows[i].split(',');
+                                var templowercase = row1.toString().toLowerCase();
 
-                                resultscounter = resultscounter + 1;
+                                //Compare
+                                if ( templowercase.includes(enteredtext) )
+                                {
+                                    divonpage.innerHTML = divonpage.innerHTML + '<div id="testesult'+resultscounter+'" style="display: flex;">' +
+                                            '<div style="width:560px;">' +
+                                            '<p id="results'+resultscounter+'">' +
+                                            '<span class="govuk-!-font-weight-bold">'
+                                            + row1 +
+                                            '</p>' +
+                                            '</div>' +
+                                            '<div style="display:flex; flex-direction:column;">' +
+                                            '<div style=" flex-grow: 2">' +
+                                            '</div>' +
+                                            '<div style="justify-content:center; margin-top:32px;">' +
+                                            '<p id="selectbutton'+resultscounter+'" style="color:#005ea5; cursor:pointer; text-decoration:underline;" data-module="govuk-button" onclick="showselectedresult('+resultscounter+')">Select</p>' +
+                                            '</div>' +
+                                            '<div style="flex-grow:2">' +
+                                            '</div>' +
+                                            '</div>' +
+                                            '</div>';
+
+                                    resultscounter = resultscounter + 1;
+                                }
                             }
                         }
-                    }
 
-                    // if no results
-                    if(resultscounter == 0)
-                    {
-                        document.getElementById("noresults").style.display = "block";
-                    }
-                    else
-                    {
-                        document.getElementById("noresults").style.display = "none";
-                    }
+                        // if no results
+                        if(resultscounter == 0)
+                        {
+                            document.getElementById("noresults").style.display = "block";
+                        }
+                        else
+                        {
+                            document.getElementById("noresults").style.display = "none";
+                        }
 
+                    }
                 }
             }
+            rawFile.send(null);
         }
-        rawFile.send(null);
     }
-
-
-
-
-
-
-    var inputbox = document.getElementById("searchinput");
 
 
     function debounce(func, wait, immediate) {
@@ -427,72 +424,6 @@ Divorce
 
 
 
-    function updateresults()
-    {
-        //alert("running");
-        // Make lower case string out of inputted value
-        var entertedtext = document.getElementById("searchinput").value;
-        //alert("entered text: " + entertedtext);
-
-        // Check which results match inputted text
-        var buttonname = 'selectbutton';
-        var matchcount = 0;
-        var str = "";
-        var prefixaddresswords = 'results';
-        var prefixaddresscontainer = 'testesult';
-        // check input has at least 2 character
-        var datacountplusone = 22;
-        if (0 == entertedtext.length)
-        {
-            document.getElementById("noresults").style.display = "none";
-            // Hide all results
-            for (i = 1; i < datacountplusone; i++)
-            {
-                document.getElementById(prefixaddresscontainer + i).style.display = "none";
-                document.getElementById(buttonname + i).innerHTML = 'Select';
-            }
-        }
-        else if (1 < entertedtext.length)
-        {
-            // search through companies
-            for (i = 1; i < datacountplusone; i++)
-            {
-                //alert(" loop " + i + "  "  + str );
-                //make a lower case string out of each possible result
-                str = document.getElementById(prefixaddresswords + i).innerHTML.toLowerCase();
-
-                //alert(" loop " + i + "  "  + str );
-                document.getElementById(buttonname + i).innerHTML = 'Select';
-
-                // check if input string is contained each result
-                if ( str.includes(entertedtext.toString().toLowerCase()) )
-                {
-                    //alert("match");
-                    document.getElementById("noresults").style.display = "none";
-                    document.getElementById(prefixaddresscontainer + i).style.display = "flex";
-                    matchcount = matchcount + 1;
-                }
-                else
-                {
-                    //remove result from showing as it no longer matches
-                    document.getElementById(prefixaddresscontainer + i).style.display = "none";
-                }
-            }
-        }
-
-        if (0 == matchcount  &&  1 < entertedtext.length)
-        {
-            //alert("NO match");
-            // Hide all results
-            for (i = 1; i < datacountplusone; i++)
-            {
-                document.getElementById(prefixaddresscontainer + i).style.display = "none";
-            }
-
-            document.getElementById("noresults").style.display = "block";
-        }
-
-    }
 
 
 
@@ -524,23 +455,19 @@ Divorce
             }
 
             document.getElementById("noresults").style.display = "none";
-
-            //alert("selection");
-            //document.getElementById(prefixaddresscontainer + itemnumber).style.display = "flex";
-
-            // Change button to deselect
-
         }
         else
         {
             // clear all the results
-            alert("clear all resutls");
+            //alert("clear all resutls");
             document.getElementById(buttonname + itemnumber).innerHTML = 'Select';
             document.getElementById("searchinput").value = "";
             // wipe results
             document.getElementById('texterdiv').innerHTML = '';
         }
     }
+
+
 
 
 
