fixed file call to async

--- a/app/views/searchorgs/search/fr2.html
+++ b/app/views/searchorgs/search/fr2.html
@@ -272,7 +272,7 @@ Divorce
         }
         else
         {   var rawFile = new XMLHttpRequest();
-            rawFile.open("GET", "/public/data/mindatacsv.csv", false);
+            rawFile.open("GET", "/public/data/mindatacsv.csv", true);
 
             rawFile.onreadystatechange = function ()
             {
