--- a/app/views/searchorgs/search/fr5.html
+++ b/app/views/searchorgs/search/fr5.html
@@ -324,7 +324,7 @@ Divorce
         }
         else
         {   var rawFile = new XMLHttpRequest();
-            rawFile.open("GET", "/public/data/mindatacsv.csv", false);
+            rawFile.open("GET", "/public/data/mindatacsv.csv", true);
 
             rawFile.onreadystatechange = function ()
             {
