changes to content from talking with dan

--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -195,7 +195,7 @@ Case details
                                         <div class="govuk-checkboxes__item">
                                             <input class="govuk-checkboxes__input" id="noticecheckbox" name="noticecheckbox" type="checkbox">
                                             <label class="govuk-label govuk-checkboxes__label" for="noticecheckbox">
-                                                <p>I can confirm I have served notice of this change on all other parties.</p>
+                                                <p>I confirm I have served notice of this change on all other parties.</p>
                                             </label>
                                         </div>
                                     </div>
