--- a/app/views/noticeofchange/solicitor/confirmation.html
+++ b/app/views/noticeofchange/solicitor/confirmation.html
@@ -82,9 +82,9 @@ Case details
                                 You should now amend the case details, for example the unique solicitor reference and the correspondence address.
                             </strong>
                         </div>
-                        <p class="govuk-body">
+                        <!-- <p class="govuk-body">
                             You must also inform all parties involved in the case.
-                        </p>
+                        </p> -->
                         <p class="govuk-body">
                             This is a new online process - you don’t need to file any further documents to the court.
                         </p>
