error state dropdown fix

--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -239,8 +239,8 @@ Case details
         <option value="errorsot=true&errorgivennotice=true&"
         >Error messages - SHOW</option>
 
-        <option value="errorsot=true&errorgivennotice=false&"
-        >Error messages - Hide</option>
+        <option value="errorsot=false&errorgivennotice=false&"
+        >Error messages - HIDE</option>
 
 
     </select>
