--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -28,7 +28,7 @@ Case details
                                 {% endif  %}
                                 {% if data.errorgivennotice == 'true'  %}
                                     <li>
-                                        <a href="#containerfornoticesharing">You must confirm you've served notice of this change.</a>
+                                        <a href="#containerfornoticesharing">You must confirm you've served notice of this change</a>
                                     </li>
                                 {% endif %}
                             </ul>
