--- a/app/views/noticeofchange/solicitor/checkanswers-e2.html
+++ b/app/views/noticeofchange/solicitor/checkanswers-e2.html
@@ -13,7 +13,7 @@ Case details
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds-from-desktop">
 
-                {% if data.errorsot == 'true'    or   data.errorgivennotice == 'true'  %}
+
                     <div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
                         <h2 class="govuk-error-summary__title" id="error-summary-title">
                             There is a problem
@@ -21,20 +21,16 @@ Case details
 
                         <div class="govuk-error-summary__body">
                             <ul class="govuk-list govuk-error-summary__list">
-                                {% if data.errorsot == 'true'  %}
-                                    <li>
-                                        <a href="#sotruth">You must confirm the information you've provided</a>
-                                    </li>
-                                {% endif  %}
-                                {% if data.errorgivennotice == 'true'  %}
+
+
                                     <li>
                                         <a href="#containerfornoticesharing">You must confirm you've served notice of this change</a>
                                     </li>
-                                {% endif %}
+
                             </ul>
                         </div>
                     </div>
-                {% endif %}
+
 
 
                 <h1 class="govuk-heading-l">Check and submit</h1>
@@ -156,11 +152,9 @@ Case details
                 </dl>
                 <form  method="post" >
                     <!-- STAMENT OF STRUTH -->
-                    {% if data.errorsot == 'true'%}
+
                         <div class="govuk-form-group govuk-form-group--error" id="sotruth">
-                    {% else %}
-                        <div class="govuk-form-group">
-                    {% endif %}
+
                         <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
                             <!--<legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
                                 <h2 class="govuk-fieldset__heading">
@@ -168,14 +162,10 @@ Case details
                                 </h2>
                             </legend>-->
                             <p>When you're satisfied that all the information matches what is written on the case, you should tick to “sign”.</p>
-                            {% if data.errorsot == 'true'%}
-                                <span id="national-insurance-number-error" class="govuk-error-message">
-                                      <span class="govuk-visually-hidden">Error:</span> Tick the box to confirm all these details are accurate and match what is written on the case
-                                </span>
-                            {% endif %}
+
                             <div class="govuk-checkboxes">
                                 <div class="govuk-checkboxes__item">
-                                    <input class="govuk-checkboxes__input" id="sot" name="sot" type="checkbox">
+                                    <input class="govuk-checkboxes__input" id="sot" name="sot" type="checkbox" checked>
                                     <label class="govuk-label govuk-checkboxes__label" for="sot">
                                         <p>I confirm all these details are accurate and match what is written on the case.</p>
                                     </label>
@@ -183,14 +173,12 @@ Case details
                             </div>
 
                             <!--   SECOND CHECKBOX  -->
-                                {% if data.errorgivennotice == 'true'%}
+
                                     <div class="govuk-form-group govuk-form-group--error" id="containerfornoticesharing">
                                         <span id="national-insurance-number-error" class="govuk-error-message">
                                               <span class="govuk-visually-hidden">Error:</span>Tick the box to confirm you've served notice of this change on all other parties
                                         </span>
-                                {% else %}
-                                    <div class="govuk-form-group">
-                                {% endif %}
+
                                     <div class="govuk-checkboxes">
                                         <div class="govuk-checkboxes__item">
                                             <input class="govuk-checkboxes__input" id="noticecheckbox" name="noticecheckbox" type="checkbox">
@@ -259,9 +247,6 @@ Case details
 
     </select>
 
-
 </form>
-
-
 
 {% endblock %}
