updated confirmation text

--- a/app/views/noticeofchange/solicitor/checkanswers-e2.html
+++ b/app/views/noticeofchange/solicitor/checkanswers-e2.html
@@ -161,7 +161,7 @@ Case details
                                     Statement of truth
                                 </h2>
                             </legend>-->
-                            <p>When you're satisfied that all the information matches what is written on the case, you should tick to “sign”.</p>
+                            <p>When you're satisfied that all the information matches what is written on the case, and you have informed all other parties of this change, you should tick to “sign”.</p>
 
                             <div class="govuk-checkboxes">
                                 <div class="govuk-checkboxes__item">
