updated Notifications text

--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -204,7 +204,7 @@ Case details
                         </fieldset>
                     </div>
                     <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Notifications</h2>
-                    <p class="govuk-body  govuk-!-margin-bottom-7">If the client had legal representation, we’ll let the previous legal firm or solicitor know that they’re no longer representing this client.</p>
+                    <p class="govuk-body  govuk-!-margin-bottom-7">If the client previously had legal representation, we’ll let the legal firm or solicitor know that they no longer have access to the case.</p>
                     <div class="govuk-inset-text">
                         After you submit a notice of change, you might have to wait a few seconds before you receive confirmation.
                     </div>
