--- a/app/views/noticeofchange/solicitor/securityquestionprobate.html
+++ b/app/views/noticeofchange/solicitor/securityquestionprobate.html
@@ -61,7 +61,8 @@ Case details
                       </div>
                 </div>
 
-                <p>You must enter the client details exactly as they’re written on the case, including any mistakes.</p>
+                <p>You must enter the client details exactly as they’re written on the case, including any mistakes.
+                    For example, if the client’s last name is Smyth but it has been spelled ‘Smith’, you should enter Smith.</p>
 
                 {% if data.errornomatch == 'true'  %}
                     <span id="" class="govuk-error-message">
