--- a/app/views/noticeofchange/solicitor/confirmation.html
+++ b/app/views/noticeofchange/solicitor/confirmation.html
@@ -79,7 +79,7 @@ Case details
                             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
                             <strong class="govuk-warning-text__text">
                                 <span class="govuk-warning-text__assistive">Warning</span>
-                                You should now amend the case details, for example the unique solicitor reference and the correspondence address.
+                                You should now amend the case details, for example the unique solicitor reference, the correspondence address and email address.
                             </strong>
                         </div>
                         <!-- <p class="govuk-body">
