selection of errors

--- a/app/views/noticeofchange/solicitor/checkanswers.html
+++ b/app/views/noticeofchange/solicitor/checkanswers.html
@@ -256,8 +256,9 @@ Case details
 
     <select style="height:25px;" onchange="location = this.value;">
 
-      <option value="#"
-      >Error states with only one checkbox</option>
+        <option value="#" selected="selected"
+        >Ignore - Error states with only one checkbox</option>
+
         <option value="checkanswers-e1"
         >Error messages - Show error 1</option>
 
